--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^1.7.7",
     "bootstrap": "^4.3.1",
     "google-maps-react": "^2.0.2",
     "react": "^16.9.0",
